@@ -6,10 +6,12 @@ endif
 
 includedir = $(prefix)/include
 
-SUBDIRS = HepMC src fio doc test examples
+SUBDIRS = HepMC src fio test examples doc
 # list all subdirectories - for distribution and cleaning
-DIST_SUBDIRS = HepMC src fio doc test examples
+DIST_SUBDIRS = HepMC src fio test examples doc
 
+# there is no longer a need to call "make docs" explicitly
+# these directives remain for convenience
 docs:
 	cd doc; $(MAKE) $(AM_MAKEFLAGS)
 
