@@ -9,7 +9,7 @@
 # ----------------------------------------------------------------------
 
 AC_PREREQ(2.59)
-AC_INIT(HepMC, 2.00.00, https://savannah.cern.ch/projects/hepmc/, HepMC)
+AC_INIT(HepMC, 2.00.02, https://savannah.cern.ch/projects/hepmc/, HepMC)
 AC_CANONICAL_TARGET
 AC_CONFIG_SRCDIR([src/GenEvent.cc])
 AM_INIT_AUTOMAKE(1.9 foreign)
@@ -148,6 +148,8 @@ AH_BOTTOM([#endif  // HEPMC_DEFS_H])
 AC_ARG_VAR(LATEX,[set if latex is in the path])
 AC_CHECK_PROG([LATEX],[latex],yes)
 AM_CONDITIONAL(HAVE_LATEX, test x$LATEX = xyes)
+AC_PATH_PROG([LATEXPATH],[latex])
+AC_SUBST(LATEXPATH)
 
 # Locate a C++ compiler:
 AC_PROG_CXX(cl g++ g++4 c++ aCC CC cxx cc++ FCC KCC RCC xlC_r xlC gpp)
