@@ -1,4 +1,10 @@
 
+2007-01-25 Lynn Garren
+
+	* configure.in, doc/Makefile.am: if latex is found, get the path
+
+	* test/testHepMC.sh.in: make the diff work for MacOSX
+
 	--------------------  HepMC-02-00-01  ---------------------------------
 
 2007-01-17 Lynn Garren
